--- a/nicepage.css
+++ b/nicepage.css
@@ -34937,7 +34937,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-image-1 {
   width: 77px;
   height: 98px;
-  margin: 21px auto 0 26px;
+  margin: 21px auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -34946,7 +34946,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -71px 26px 0 auto;
+  margin: -72px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -34963,10 +34963,10 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-btn-1 {
   background-image: none;
   border-style: none;
-  font-weight: 700;
   font-size: 1.25rem;
+  font-weight: 700;
   text-decoration: underline !important;
-  margin: -43px auto 50px 268px;
+  margin: -43px auto 0 266px;
   padding: 0;
 }
 
@@ -34978,15 +34978,19 @@ a.u-link.u-text-hover-grey-90:hover {
     min-height: 152px;
   }
 
+  .u-header .u-image-1 {
+    height: 97px;
+    margin-top: 28px;
+  }
+
   .u-header .u-menu-1 {
-    width: auto;
-    margin-top: -65px;
-    margin-right: 0;
+    margin-top: -72px;
   }
 
   .u-header .u-btn-1 {
+    margin-top: -43px;
     margin-bottom: 56px;
-    margin-left: 151px;
+    margin-left: 130px;
   }
 
   .u-header .u-icon-1 {
@@ -34999,12 +35003,12 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    margin-top: 29px;
-    margin-left: 20px;
+    margin-top: 30px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -65px;
+    width: auto;
+    margin-top: -64px;
   }
 
   .u-header .u-btn-1 {
@@ -35019,13 +35023,12 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    margin-top: 21px;
+    margin-top: 22px;
   }
 
   .u-header .u-btn-1 {
     align-self: center;
-    margin-top: -36px;
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
 }
 @media (max-width: 575px) {
@@ -35034,17 +35037,12 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    margin-top: 29px;
-    margin-left: 0;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: -64px;
+    margin-top: 30px;
   }
 
   .u-header .u-btn-1 {
     font-weight: normal;
-    margin-right: 60px;
+    margin-right: 54px;
     margin-bottom: 58px;
   }
 }
