--- a/Галерея.css
+++ b/Галерея.css
@@ -8,7 +8,7 @@
 
 .u-section-1 .u-image-1 {
   min-height: 590px;
-  background-image: url("images/ef77e23a-e1fa-b1d8-b34d-f19fa3eba8c8.jpg");
+  background-image: url("images/cerkva_zashkiv.jpg");
   background-position: 50% 50%;
 }
 
