--- a/nicepage.css
+++ b/nicepage.css
@@ -31623,7 +31623,7 @@ a.u-link.u-text-hover-palette-1-light-3:hover {
 .u-text-palette-1-base,
 a.u-button-style.u-text-palette-1-base,
 a.u-button-style.u-text-palette-1-base[class*="u-border-"] {
-  color: #478ac9 !important;
+  color: #03a9f4 !important;
 }
 a.u-button-style.u-text-palette-1-base:hover,
 a.u-button-style.u-text-palette-1-base[class*="u-border-"]:hover,
